added min height

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   /* background-image: url("go-vegan.jpg"); */
   background-color: green;
   max-width: 100%;
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   margin: 0 auto;
